Se actualizo y se agrego una imagen de fondo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,3 +99,10 @@ h1 {
 .back-link:hover {
   background-color: #1e8449;
 }
+
+body {
+  background-image: url('./image/car.jpg');
+  background-size: cover; /* Ajusta la imagen para cubrir toda la pantalla */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+}
